--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,23 @@
     <title>Quiz</title>
 </head>
 <body>
-    
+    <h1>Triangle Quiz</h1>
+    <form id="quiz-form">
+        <div>
+            <p> What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
+            <label><input type="radio" name="question1" value="45°"/>45°</label>
+            <label><input type="radio" name="question1" value="60°"/>60°</label>
+            <label><input type="radio" name="question1" value="90°"/>90°</label>
+        </div>
+        <div>
+            <p> If a triangle has an angle of 90 degrees, what is it called?</p>
+            <label><input type="radio" name="question2" value="acute"/>acute</label>
+            <label><input type="radio" name="question2" value="obtuce"/>obtuce</label>
+            <label><input type="radio" name="question2" value="right angled"/>right angled</label>
+        </div>
+    </form>
+    <button id="submit-btn">Submit Answers</button>
+    <div id="output"></div>
 
     <script src="quiz.js"></script>
 </body>
