--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="hypotenuse.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <title>Hypotenuse of triangle</title>
 </head>
 <body>
+    <nav class="navigation">
+        <h5 class="website-name">Fun With Triangles</h5>
+        <div >
+            <ul class="nav-pills">
+                <li class="nav-main"><a class="link " href="istriangle.html">Is Triangle?</a></li>
+                <li class="nav-main"><a class="link link-active" href="hypotenuse.html">Find Hypotenuse</a></li>
+                <li class="nav-main"><a class="link " href="quiz.html">Quiz</a></li>
+                <li class="nav-main"><a class="link " href="areaoftriangle.html">Area of Triangle</a></li>
+            </ul>
+        </div>
+        
+    </nav>
     <div class="container">
         <h1>Enter the lengths of sides of right angle triangle</h1>
         <label>A = </label>
