--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
     <title>Is Triangle?</title>
 </head>
 <body>
-    <nav class="navigation">
-        <h5 class="website-name">Fun With Triangles</h5>
-        <div >
-            <ul class="nav-pills">
-                <li class="nav-main"><a class="link " href="istriangle.html">Is Triangle?</a></li>
-                <li class="nav-main"><a class="link link-active" href="hypotenuse.html">Find Hypotenuse</a></li>
-                <li class="nav-main"><a class="link " href="quiz.html">Quiz</a></li>
-                <li class="nav-main"><a class="link " href="areaoftriangle.html">Area of Triangle</a></li>
-            </ul>
-        </div>
-        
-    </nav>
+    <nav></nav>
+    
+    <div class="container">
+        <ul class="nav-pills">
+            <li class="nav-main"><a class="link link-active" href="istriangle.html">Is Triangle?</a></li><br/><br/>
+            <li class="nav-main"><a class="link link-active" href="hypotenuse.html">Find Hypotenuse</a></li><br/><br/>
+            <li class="nav-main"><a class="link link-active" href="quiz.html">Quiz</a></li><br/><br/>
+            <li class="nav-main"><a class="link link-active" href="areaoftriangle.html">Area of Triangle</a></li>
+        </ul>
+    </div>
 </body>
 </html>
