--- a/areaoftriangle.html
+++ b/areaoftriangle.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <nav class="navigation">
-        <h5 class="website-name">Fun With Triangles</h5>
+        <h3 class="website-name">Fun With Triangles</h3>
         <div >
             <ul class="nav-pills">
-                <li class="nav-main"><a class="link " href="istriangle.html">Is Triangle?</a></li>
-                <li class="nav-main"><a class="link " href="hypotenuse.html">Find Hypotenuse</a></li>
-                <li class="nav-main"><a class="link " href="quiz.html">Quiz</a></li>
-                <li class="nav-main"><a class="link link-active" href="areaoftriangle.html">Area of Triangle</a></li>
+                <li class="nav-main"><a class="link " href="istriangle.html">Is this a triangle?</a></li>
+                <li class="nav-main"><a class="link " href="hypotenuse.html">Find hypotenuse of right angled triangle</a></li>
+                <li class="nav-main"><a class="link " href="quiz.html">Solve Quiz on triangles</a></li>
+                <li class="nav-main"><a class="link link-active" href="areaoftriangle.html">Find area of Triangle</a></li>
             </ul>
         </div>
         
@@ -28,6 +28,7 @@
         <button id="btn">Calculate</button>
         <h3 id="output"></h3>
     </div>
+    
     <script src="areaoftriangle.js"></script>
 </body>
 </html>
