--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <nav class="navigation">
-        <h5 class="website-name">Fun With Triangles</h5>
+        <h3 class="website-name">Fun With Triangles</h3>
         <div >
             <ul class="nav-pills">
-                <li class="nav-main"><a class="link " href="istriangle.html">Is Triangle?</a></li>
-                <li class="nav-main"><a class="link link-active" href="hypotenuse.html">Find Hypotenuse</a></li>
-                <li class="nav-main"><a class="link " href="quiz.html">Quiz</a></li>
-                <li class="nav-main"><a class="link " href="areaoftriangle.html">Area of Triangle</a></li>
+                <li class="nav-main"><a class="link " href="istriangle.html">Is this a triangle?</a></li>
+                <li class="nav-main"><a class="link link-active" href="hypotenuse.html">Find hypotenuse of right angled triangle</a></li>
+                <li class="nav-main"><a class="link " href="quiz.html">Solve Quiz on triangles</a></li>
+                <li class="nav-main"><a class="link " href="areaoftriangle.html">Find area of Triangle</a></li>
             </ul>
         </div>
         
     </nav>
     <div class="container">
-        <h1>Enter the lengths of sides of right angle triangle</h1>
+        <h4>Enter the lengths of sides of right angle triangle</h4>
         <label>A = </label>
         <input class="side" type="number">
         <label >B = </label>
