--- a/quiz.html
+++ b/quiz.html
@@ -10,27 +10,28 @@
 </head>
 <body>
     <nav class="navigation">
-        <h5 class="website-name">Fun With Triangles</h5>
+        <h3 class="website-name">Fun With Triangles</h3>
         <div >
             <ul class="nav-pills">
-                <li class="nav-main"><a class="link " href="istriangle.html">Is Triangle?</a></li>
-                <li class="nav-main"><a class="link " href="hypotenuse.html">Find Hypotenuse</a></li>
-                <li class="nav-main"><a class="link link-active" href="quiz.html">Quiz</a></li>
-                <li class="nav-main"><a class="link " href="areaoftriangle.html">Area of Triangle</a></li>
+                <li class="nav-main"><a class="link " href="istriangle.html">Is this a triangle?</a></li>
+                <li class="nav-main"><a class="link " href="hypotenuse.html">Find hypotenuse of right angled triangle</a></li>
+                <li class="nav-main"><a class="link link-active" href="quiz.html">Solve Quiz on triangles</a></li>
+                <li class="nav-main"><a class="link " href="areaoftriangle.html">Find area of Triangle</a></li>
             </ul>
         </div>
         
     </nav>
-    <h1 >Triangle Quiz</h1>
+    
     <form id="quiz-form" class="quiz-form2">
         <div>
-            <p> What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
+            <h2 >Triangle Quiz</h2>
+            <p>1. What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
             <label><input type="radio" name="question1" value="45°"/>45°</label>
             <label><input type="radio" name="question1" value="60°"/>60°</label>
             <label><input type="radio" name="question1" value="90°"/>90°</label>
         </div>
         <div>
-            <p> If a triangle has an angle of 90 degrees, what is it called?</p>
+            <p>2. If a triangle has an angle of 90 degrees, what is it called?</p>
             <label><input type="radio" name="question2" value="acute"/>acute</label>
             <label><input type="radio" name="question2" value="obtuce"/>obtuce</label>
             <label><input type="radio" name="question2" value="right angled"/>right angled</label>
