--- a/quiz.html
+++ b/quiz.html
@@ -36,6 +36,43 @@
             <label><input type="radio" name="question2" value="obtuce"/>obtuce</label>
             <label><input type="radio" name="question2" value="right angled"/>right angled</label>
         </div>
+        <div>
+            <p>3. D and E are respectively the midpoints on the sides AB and AC of a triangle ABC and BC = 6 cm. If DE || BC, then the length of DE (in cm) is</p>
+            <label><input type="radio" name="question3" value="2.5"/>2.5</label>
+            <label><input type="radio" name="question3" value="5"/>5</label>
+            <label><input type="radio" name="question3" value="3"/> 3</label>
+        </div>
+        <div>
+            <p>4. In triangle PQR, if PQ = 6 cm, PR = 8 cm, QS = 3 cm, and PS is the bisector of angle QPR, what is the length of SR?</p>
+            <label><input type="radio" name="question4" value="2"/>2</label>
+            <label><input type="radio" name="question4" value="4"/>4</label>
+            <label><input type="radio" name="question4" value="6"/>6</label>
+        </div>
+        <div>
+            <p>5. The lengths of the diagonals of a rhombus are 16 cm and 12cm. Then, thelength of the side of the rhombus is</p>
+            <label><input type="radio" name="question5" value="9"/>9</label>
+            <label><input type="radio" name="question5" value="10"/>10</label>
+            <label><input type="radio" name="question5" value="8"/>8</label>
+        </div>
+        <div>
+            <p>6. A flag pole 18 m high casts a shadow 9.6 m long. Find the distance of the top of the pole from the far end of the shadow.</p>
+            <label><input type="radio" name="question6" value="25.6"/>25.6</label>
+            <label><input type="radio" name="question6" value="20.4"/>20.4</label>
+            <label><input type="radio" name="question6" value="23.7"/>23.7</label>
+        </div>
+        <div>
+            <p>7. Diagonals of a trapezium PQRS intersect each other at the point O, PQ || RS and PQ = 3 RS, Then the ratio of areas of triangles POQ and ROS is:</p>
+            <label><input type="radio" name="question7" value="1:9"/>1:9</label>
+            <label><input type="radio" name="question7" value="9:1"/>9:1</label>
+            <label><input type="radio" name="question7" value="3:1"/>3:1</label>
+        </div>
+        <div>
+            <p>8. ABCD is a trapezium in which AB|| DC and P, Q are points on ADand BC respectively such that PQ || DC. If PD = 18 cm, BQ = 35 cm andQC = 15 cm, find AD.</p>
+            <label><input type="radio" name="question8" value="55cm"/>55cm</label>
+            <label><input type="radio" name="question8" value="57cm"/>57cm</label>
+            <label><input type="radio" name="question8" value="60cm"/>60cm</label>
+        </div>
+        
     </form>
     <button id="submit-btn" class="quiz-form2">Submit Answers</button>
     <div id="output"></div>
